--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-**죄송합니다! 요청하신 수정사항들을 제대로 반영하겠습니다:**
+**완전한 HTML 코드 (JavaScript 포함):**
 
 ```html
 <!DOCTYPE html>
@@ -850,4 +850,6 @@
     <script>
         // 전역 변수
         let isPlaying = false;
-        let musicInitialized =
+        let musicInitialized = false;
+        const bgMusic = document.getElementById('bgMusic');
+        
