--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
         }
 
         table td {
-            color: #6a5a7a;
+            color: #6a5a6a;
             border: 1px solid transparent;
             position: relative;
         }
@@ -415,41 +415,6 @@
             color: #ff6b9d;
             text-align: center;
             padding: 20px;
-        }
-
-        /* 갤러리 */
-        .gallery {
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            gap: 15px;
-            margin: 20px 0;
-        }
-
-        .gallery-item {
-            border-radius: 15px;
-            overflow: hidden;
-            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
-        }
-
-        .gallery-item:hover {
-            transform: translateY(-5px);
-        }
-
-        .gallery-item img {
-            width: 100%;
-            height: 120px;
-            object-fit: cover;
-        }
-
-        .gallery-placeholder {
-            height: 120px;
-            background: linear-gradient(135deg, #ffeef8, #f8e8ff);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 24px;
-            color: #ff6b9d;
         }
 
         /* 위치 정보 */
@@ -1305,31 +1270,6 @@
             </div>
         </div>
         
-        <!-- 갤러리 -->
-        <div class="section">
-            <div class="section-title">갤러리</div>
-            <div class="gallery">
-                <div class="gallery-item clickable-image">
-                    <div class="gallery-placeholder">🎂</div>
-                </div>
-                <div class="gallery-item clickable-image">
-                    <div class="gallery-placeholder">👶</div>
-                </div>
-                <div class="gallery-item clickable-image">
-                    <div class="gallery-placeholder">👶</div>
-                </div>
-                <div class="gallery-item clickable-image">
-                    <div class="gallery-placeholder">🎁</div>
-                </div>
-                <div class="gallery-item clickable-image">
-                    <div class="gallery-placeholder">🎈</div>
-                </div>
-                <div class="gallery-item clickable-image">
-                    <div class="gallery-placeholder">🎊</div>
-                </div>
-            </div>
-        </div>
-        
         <!-- 오시는 길 -->
         <div class="section">
             <div class="section-title">오시는 길</div>
@@ -1442,9 +1382,8 @@
                 <div class="transport-section car">
                     <h4>🚗 차량 이용시</h4>
                     <p>
-                        차량으로 오시는분들은<br>
-                        T MAP 또는 카카오네비에<br>
-                        <strong>서울 강서구 양천로570</strong> 또는 <strong>NH서울타워</strong>로<br>
+                        차량으로 오시는분들은 T MAP 또는 카카오네비에
+                        <strong>서울 강서구 양천로570</strong> 또는 <strong>NH서울타워</strong>로
                         검색하시면 주차장으로 바로 오실 수 있습니다
                     </p>
                 </div>
