--- a/index.html
+++ b/index.html
@@ -1315,7 +1315,7 @@
                 <div class="timeline-section">
                     <div class="timeline-header">
                         <div class="timeline-date">2025년 7월</div>
-                        <div class="timeline-title">둥이들 돌 사진</div>
+                        <div class="timeline-title">둥이들 300일</div>
                     </div>
                     <div class="timeline-photos">
                         <div class="timeline-photo-item clickable-image">
@@ -1446,7 +1446,7 @@
                     <p>
                         지하철 9호선 증미역 3번출구로 나오시면<br>
                         우측에 바로보이시는 가장 큰건물(NH 서울타워) 20층 입니다<br>
-                        증미역에서 도보로 1분정도 거리에 있습니다.
+                        증미역에서 도보로 1분정도 거리에 있습니다
                     </p>
                 </div>
                 
