--- a/index.html
+++ b/index.html
@@ -1463,7 +1463,7 @@
         
         <!-- 참석 여부 -->
         <div class="section">
-            <div class="section-title">참석 여부 알려주세요</div>
+            <div class="section-title">참석 여부를 알려주세요</div>
             <div class="rsvp">
                 <form id="attendForm">
                     <div class="form-group">
