--- a/index.html
+++ b/index.html
@@ -1122,7 +1122,8 @@
                 <div class="event-date">2025년 7월 5일 (토)</div>
                 <div class="event-time">오전 11시 30분</div>
                 <div class="venue">
-                    <div class="venue-name">더퍼스트클래스파티 강서NH서울타워점</div>
+                    <div class="venue-name">더퍼스트클래스파티<br> 
+                        강서NH서울타워점</div>
                     <div class="venue-detail">클래스홀</div>
                 </div>
             </div>
