--- a/index.html
+++ b/index.html
@@ -269,13 +269,13 @@
 
         .venue-name {
             color: #ff6b9d;
-            font-size: 20px;
+            font-size: 15px;
             font-weight: 700;
             margin-bottom: 5px;
         }
 
         .venue-detail {
-            font-size: 17px;
+            font-size: 15px;
             color: #6a5a7a;
         }
 
@@ -1122,8 +1122,7 @@
                 <div class="event-date">2025년 7월 5일 (토)</div>
                 <div class="event-time">오전 11시 30분</div>
                 <div class="venue">
-                    <div class="venue-name">더퍼스트클래스파티<br>
-                        강서NH서울타워점</div>
+                    <div class="venue-name">더퍼스트클래스파티 강서NH서울타워점</div>
                     <div class="venue-detail">클래스홀</div>
                 </div>
             </div>
