--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
         .nav-title {
             text-align: center;
             color: #ff6b9d;
-            font-size: 16px;
+            font-size: 18px;
             font-weight: 600;
             margin-bottom: 15px;
         }
@@ -1348,12 +1348,12 @@
                 <p class="location-name">더퍼스트클래스파티 강서NH서울타워점</p>
                 <p>클래스홀</p>
                 <p>서울특별시 강서구 양천로 570 20층</p>
-                <p>📞 02-2013-5670</p>
+                <p> 02-2013-5670</p>
                 <a class="map-button" href="https://naver.me/5ss0AH07" target="_blank">📍 네이버 지도에서 보기</a>
                 
                 <!-- 네비게이션 바로가기 -->
                 <div class="navigation-buttons">
-                    <div class="nav-title">📱 내비게이션 바로가기</div>
+                    <div class="nav-title"> 내비게이션 바로가기</div>
                     <div class="nav-grid">
                         <!-- T맵 -->
                         <a href="tmap://search?name=서울 강서구 양천로570" class="nav-btn tmap-btn">
